# pgFirstAid

./: .gitignore  README.md  pgFirstAid.sql  pyproject.toml  view_pgFirstAid.sql  view_pgFirstAid_managed.sql
.github/: CODEOWNERS  CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  pull_request_template.md  release-drafter.yml
.github/workflows/: .release-drafter.yml.swp  README.md  aws-rds-opentofu.yml  azure-postgres-opentofu.yml  deploy-aws-rds.yml  deploy-gcp-postgres.yml  gcp-cloudsql-opentofu.yml  integration-pg-matrix.yml  managed-db-validate.yml  neon-before-after-validate.yml  nixos-local-test.yml  release-drafter.yml
roadmap/: README.md
testing/: pgfirstaid_test_data.sql  seed_and_validate.py  test_seed_and_validate.py
testing/.flox/: env.json
testing/healthcheck_seed/: 01_seed_static_checks.sql  02_seed_pg_stat_statements.sql  03_session_blocker.sql  04_session_blocked.sql  05_session_idle_in_transaction.sql  06_session_long_running_query.sql  07_pgbench_active_query.sql  99_validate_seed_results.sql  README.md
testing/integration/: README.md  pyproject.toml
testing/integration/src/pgfirstaid_pytest/: config.py  db.py
testing/integration/tests/: conftest.py  test_config.py
testing/integration/tests/integration/: test_health_checks.py  test_pgtap_suite.py
testing/local-workflows/: .env.example  .gitignore  Makefile  docker-compose.yml  test_pr_audit.sh  (+4 more)
workflows/: README.md  db-health-checks.yml  managed-db-validate.yml  neon-before-after-validate.yml  pgfirstaid-pr-audit.yml  pgfirstaid_audit.py  pre-post-migration-validate.yml
(+69 files in other folders)
